<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.clavicusoft.wumpus.Draw.DrawMazeActivity"
    android:background="@drawable/other_background">

    <Button
        android:id="@+id/btnInfo"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:onClick="info"
        android:background="@drawable/info_icon"
        android:layout_gravity="end"
        tools:ignore="ContentDescription" />

    <view
        android:id="@+id/viewDrawCanvas"
        class="com.clavicusoft.wumpus.Draw.DrawCanvas"
        layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5.17"
        android:layout_marginBottom="5dp"
        android:background="@color/transparent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnAddCave"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="addC"
                android:text="Agregar cueva"
                android:textSize="13sp"
                android:textColor="@color/white"
                android:background="@color/white_button"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                tools:ignore="ContentDescription" />

            <Button
                android:id="@+id/btnDelCave"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="delC"
                android:text="Eliminar cueva"
                android:textSize="13sp"
                android:textColor="@color/white"
                android:background="@color/white_button"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                tools:ignore="ContentDescription" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnAddArc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="addA"
                android:text="Agregar camino"
                android:textSize="13sp"
                android:textColor="@color/white"
                android:background="@color/white_button"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                tools:ignore="ContentDescription" />

            <Button
                android:id="@+id/btnDelArc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="delA"
                android:text="Eliminar camino"
                android:textSize="13sp"
                android:textColor="@color/white"
                android:background="@color/white_button"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                tools:ignore="ContentDescription" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnNew"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="newD"
                android:text="Reiniciar dibujo"
                android:textSize="13sp"
                android:textColor="@color/white"
                android:background="@color/white_button"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                tools:ignore="ContentDescription" />

            <Button
                android:id="@+id/imgBtnCheck"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:elevation="1dp"
                android:onClick="checkD"
                android:text="Guardar dibujo"
                android:textSize="13sp"
                android:textColor="@color/white"
                android:background="@color/white_button"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                tools:ignore="ContentDescription" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>