<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation = "vertical"
    tools:context="com.clavicusoft.wumpus.Select.SelectPolyActivity"
    android:weightSum="1"
    android:background="@drawable/other_background_purple">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:text="Deslice para escoger un laberinto" />

    <android.support.v4.view.ViewPager
        android:id="@+id/ImageSlider"
        android:layout_width="match_parent"
        android:layout_height="172dp"
        android:layout_weight="0.92"
        />

    <Button
        android:id="@+id/bttnStartGame"
        android:layout_gravity="center"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:onClick="startGame"
        android:textColor="@color/white"
        android:background="@color/white_button"
        android:layout_marginBottom="10dp"
        android:text="Iniciar el juego" />

    <Button
        android:id="@+id/bttnDrawLab"
        android:layout_gravity="center"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:onClick="drawLabyrinthView"
        android:textColor="@color/white"
        android:background="@color/white_button"
        android:layout_marginBottom="10dp"
        android:text="Dibujar un laberinto" />

    <Button
        android:id="@+id/bttnChooseLib"
        android:layout_gravity="center"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:onClick="selectFromLibView"
        android:textColor="@color/white"
        android:background="@color/white_button"
        android:text="Biblioteca de laberintos" />
</LinearLayout>
