...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:baselineAligned="false"
        android:id="@+id/linearLayout">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="800px"
            android:layout_height="800px"
            android:background="@drawable/WumpusPNG"
            app:srcCompat="@drawable/WumpusPNG"
            android:scaleType="fitXY"
            />

        <Button
            android:id="@+id/Individual"
            android:layout_width="170dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="100px"
            android:textSize="18dp"
            android:textColor="@color/white"
...
